# Kursovaya_3

./: README.md  main.py  pyproject.toml
data/: json_vacancies.json
src/: base_hh_api.py  dbmanager.py  hh_api.py  utils.py
